tests/machine/x/kotlin/group_by_sort.error
line 2:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:2:37: error: parameter name expected
data class Item(var cat: String, var val: Int)
                                    ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:2:41: error: parameter name expected
data class Item(var cat: String, var val: Int)
                                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:43: error: expecting an expression
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                          ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:43: error: expecting ')'
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                          ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:51: error: property getter or setter expected
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:72: error: expecting property name or receiver type
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:76: error: property getter or setter expected
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                           ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:98: error: expecting property name or receiver type
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                                                 ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:102: error: property getter or setter expected
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                                                     ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:124: error: expecting property name or receiver type
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                                                                           ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:128: error: property getter or setter expected
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                                                                                               ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:27:24: error: expecting property name or receiver type
        __res.add(x.val)
                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:27:25: error: expecting ')'
        __res.add(x.val)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:36:24: error: expecting property name or receiver type
        __res.add(x.val)
                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:36:25: error: expecting ')'
        __res.add(x.val)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:2:38: error: conflicting declarations: public final var <no name provided>: [ERROR : Annotation is absent], public final val <no name provided>: Int
data class Item(var cat: String, var val: Int)
                                     ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:27: error: assignments are not expressions, and only expressions are allowed in this context
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                          ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:6:49: error: the integer literal does not conform to the expected type Item
val items = mutableListOf(Item(cat = "a", val = 3), Item(cat = "a", val = 1), Item(cat = "b", val = 5), Item(cat = "b", val = 2))
                                                ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:19:17: error: type inference failed: Not enough information to infer parameter V in fun <K, V> mutableMapOf(vararg pairs: Pair<K, V>): MutableMap<K, V>
Please specify it explicitly.

        __g.add(mutableMapOf("i" to i) as MutableMap<Any?, Any?>)
                ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:30:3: error: unresolved reference: sumOf
}.sumOf { toInt(it) }))
  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:30:11: error: unresolved reference: toInt
}.sumOf { toInt(it) }))
          ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:30:17: error: unresolved reference: it
}.sumOf { toInt(it) }))
                ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:35:15: error: for-loop range must have an 'iterator()' method
    for (x in it) {
              ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:39:3: error: unresolved reference: sumOf
}.sumOf { toInt(it) } as Comparable<Any> }
  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:39:11: error: unresolved reference: toInt
}.sumOf { toInt(it) } as Comparable<Any> }
          ^

  1: class Group(val key: Any?, val items: MutableList<Any?>) : MutableList<Any?> by items
  2: data class Item(var cat: String, var val: Int)
  3: 
